--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-rotating-text": "^1.4.1",
     "react-scripts": "5.0.1",
     "swiper": "^8.2.4",
     "web-vitals": "^2.1.4"
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.32.2"
   }
 }
