--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
+    "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-images-viewer": "^1.7.1",
     "react-rotating-text": "^1.4.1",
     "react-scripts": "5.0.1",
-    "swiper": "^8.2.4",
+    "react-tsparticles": "^2.9.3",
+    "react-vertical-timeline-component": "^3.6.0",
+    "swiper": "^8.4.7",
+    "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
