--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
-    "jquery": "^3.7.0",
+    "material-ui": "^0.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-images": "^1.2.0-beta.7",
     "react-images-viewer": "^1.7.1",
+    "react-photo-gallery": "^8.0.0",
     "react-rotating-text": "^1.4.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.9.3",
