--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    // "@material-ui/core": "^4.12.4",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
@@ -15,7 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "jquery": "^3.7.0",
-    // "material-ui": "^0.20.2",
+    "material-ui": "^0.20.2",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
