--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "aos": "^3.0.0-beta.6",
     "jquery": "^3.7.0",
     "material-ui": "^0.20.2",
-    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -57,6 +56,7 @@
   },
   "devDependencies": {
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+	"nodemon": "^2.0.22"
   }
 }
